--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.daniloarcidiacono</groupId>
     <artifactId>typescript-mapper</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>TypeScript mapper from Java classes</name>
     <description>TypeScript mapper from Java classes</description>
@@ -47,6 +47,9 @@
         <!-- Dependencies -->
         <junit.bom.version>5.2.0</junit.bom.version>
         <junit.platform.version>1.2.0</junit.platform.version>
+        <jackson.version>2.9.5</jackson.version>
+        <reflections.version>0.9.11</reflections.version>
+        <commons-lang.version>0.0.1-SNAPSHOT</commons-lang.version>
         <typescript-template.version>0.0.1-SNAPSHOT</typescript-template.version>
 
         <!-- Plugins -->
@@ -75,8 +78,23 @@
     <dependencies>
         <dependency>
             <groupId>io.github.daniloarcidiacono</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons-lang.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.daniloarcidiacono</groupId>
             <artifactId>typescript-template</artifactId>
             <version>${typescript-template.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>${reflections.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
