--- a/typescript-mapper-core/pom.xml
+++ b/typescript-mapper-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>typescript-mapper</artifactId>
         <groupId>io.github.daniloarcidiacono.typescriptmapper</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <artifactId>typescript-mapper-core</artifactId>
