--- a/typescript-mapper-maven-plugin/pom.xml
+++ b/typescript-mapper-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>typescript-mapper</artifactId>
         <groupId>io.github.daniloarcidiacono.typescriptmapper</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
 
     <artifactId>typescript-mapper-maven-plugin</artifactId>
@@ -49,6 +49,19 @@
     </dependencies>
 
     <profiles>
+        <profile>
+            <id>docs</id>
+            <build>
+                <plugins>
+                    <!-- Export Javadoc -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <profile>
             <id>ossrh</id>
             <build>
