--- a/typescript-mapper-maven-plugin/pom.xml
+++ b/typescript-mapper-maven-plugin/pom.xml
@@ -50,6 +50,19 @@
 
     <profiles>
         <profile>
+            <id>docs</id>
+            <build>
+                <plugins>
+                    <!-- Export Javadoc -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
             <id>ossrh</id>
             <build>
                 <plugins>
